--- a/index.html
+++ b/index.html
@@ -23,13 +23,48 @@
                         <p class="profile__spec ">Исследователь океана</p>
                     </div>
                 </div>
-                <button class="profile__add "><img src="./images/plusImg.svg " alt="Добавить "></button>
+                <button class="profile__add "><img class="profile__add_img" src="./images/plusImg.svg " alt="Добавить "></button>
             </section>
             <section class="cards">
-                <ul class="cards">
+                <ul class="card__list">
                     <li class="card">
-                        <img class="card__img" src="images/karachaevsk.jpg">
-                        <div class="card_description">
+                        <img class="card__image" src="images/karachaevsk.jpg">
+                        <div class="card__description">
+                            <p class="card__title">Карачаевск</p>
+                            <img class="card__emotion" src="images/like.svg">
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img class="card__image" src="images/Elbrus.jpg">
+                        <div class="card__description">
+                            <p class="card__title">Гора Эльбрус</p>
+                            <img class="card__emotion" src="images/like.svg">
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img class="card__image" src="images/Dombau.jpg">
+                        <div class="card__description">
+                            <p class="card__title">Домбай</p>
+                            <img class="card__emotion" src="images/like.svg">
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img class="card__image" src="images/Elbrus.jpg">
+                        <div class="card__description">
+                            <p class="card__title">Гора Эльбрус</p>
+                            <img class="card__emotion" src="images/like.svg">
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img class="card__image" src="images/Dombau.jpg">
+                        <div class="card__description">
+                            <p class="card__title">Домбай</p>
+                            <img class="card__emotion" src="images/like.svg">
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img class="card__image" src="images/karachaevsk.jpg">
+                        <div class="card__description">
                             <p class="card__title">Карачаевск</p>
                             <img class="card__emotion" src="images/like.svg">
                         </div>
@@ -37,8 +72,8 @@
                 </ul>
             </section>
         </main>
-        <footer class="footer ">
-
+        <footer class="footer">
+            <p class="footer__copyright">© 2021 Mesto Russia</p>
         </footer>
     </div>
 </body>
