--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <div class="profile__card">
                     <img class="profile__avatar" src="images/image.jpg" alt="Аватар">
                     <div class="profile__info">
-                        <p class="profile__name">Жак-Ив-Кусто
-                            <button class="profile__edit"><img class="profile__edit_img" src="images/pen.svg"></button></p>
+                        <p class="profile__name">Жак-Ив-Кусто</p>
+                        <button class="profile__button"><img class="profile__button_img" src="images/pen.svg"></button>
                         <p class="profile__spec ">Исследователь океана</p>
                     </div>
                 </div>
