--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
                 </ul>
             </section>
             <section class="popup popup_opened">
-                <button class="popup__bclose"><img class="popup__bclose_img" src="images/Close Icon.svg"></button>
-                <div class="popup__container">
-                    <h2 class="popup__title">Редактировать профиль</h2>
-                    <input class="popup__name" type="text" value="Жак-Ив-Кусто">
-                    <input class="popup__spec" type="text" value="Исследователь океана">
-                    <button class="popup__bsave">Сохранить</button>
+                <div class="popup__content">
+                    <button class="popup__bclose"><img class="popup__bclose_img" src="images/Close Icon.svg"></button>
+                    <div class="popup__container">
+                        <h2 class="popup__title">Редактировать профиль</h2>
+                        <input class="popup__name" type="text" value="Жак-Ив-Кусто">
+                        <input class="popup__spec" type="text" value="Исследователь океана">
+                        <button class="popup__bsave">Сохранить</button>
+                    </div>
                 </div>
             </section>
         </main>
