--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="body">
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="images/Vector.svg" atl='Логотип'>
+            <img class="header__logo" src="images/Vector.svg" alt='Логотип'>
         </header>
         <main class="content">
             <section class="profile">
@@ -28,45 +28,45 @@
             <section class="cards">
                 <ul class="card__list">
                     <li class="card">
-                        <img class="card__image" src="images/karachaevsk.jpg">
+                        <img class="card__image" src="images/karachaevsk.jpg" alt="Изображение Карачаевск">
                         <div class="card__description">
-                            <p class="card__title">Карачаевск</p>
-                            <img class="card__emotion" src="images/like.svg">
+                            <h2 class="card__title">Карачаевск</h2>
+                            <img class="card__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
                     <li class="card">
-                        <img class="card__image" src="images/Elbrus.jpg">
+                        <img class="card__image" src="images/Elbrus.jpg" alt="Изображение Эльбрус">
                         <div class="card__description">
-                            <p class="card__title">Гора Эльбрус</p>
-                            <img class="card__emotion" src="images/like.svg">
+                            <h2 class="card__title">Гора Эльбрус</h2>
+                            <img class="card__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
                     <li class="card">
-                        <img class="card__image" src="images/Dombau.jpg">
+                        <img class="card__image" src="images/Dombau.jpg" alt="Изображение Домбай">
                         <div class="card__description">
-                            <p class="card__title">Домбай</p>
-                            <img class="card__emotion" src="images/like.svg">
+                            <h2 class="card__title">Домбай</h2>
+                            <img class="card__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
                     <li class="card">
-                        <img class="card__image" src="images/Elbrus.jpg">
+                        <img class="card__image" src="images/Elbrus.jpg" alt="Изображение Эльбрус">
                         <div class="card__description">
-                            <p class="card__title">Гора Эльбрус</p>
-                            <img class="card__emotion" src="images/like.svg">
+                            <h2 class="card__title">Гора Эльбрус</h2>
+                            <img class="card__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
                     <li class="card">
-                        <img class="card__image" src="images/Dombau.jpg">
+                        <img class="card__image" src="images/Dombau.jpg" alt="Изображение Домбай">
                         <div class="card__description">
-                            <p class="card__title">Домбай</p>
-                            <img class="card__emotion" src="images/like.svg">
+                            <h2 class="card__title">Домбай</h2>
+                            <img class="card__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
                     <li class="card">
-                        <img class="card__image" src="images/karachaevsk.jpg">
+                        <img class="card__image" src="images/karachaevsk.jpg" alt="Изображение Карачаевск">
                         <div class="card__description">
-                            <p class="card__title">Карачаевск</p>
-                            <img class="card__emotion" src="images/like.svg">
+                            <h2 class="card__title">Карачаевск</h2>
+                            <img class="card__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
                 </ul>
