--- a/index.html
+++ b/index.html
@@ -27,42 +27,42 @@
             </section>
             <section class="cards">
                 <ul class="card__list">
-                    <li class="card">
+                    <li class="card__conteiner">
                         <img class="card__image" src="images/karachaevsk.jpg" alt="Изображение Карачаевск">
                         <div class="card__description">
                             <h2 class="card__title">Карачаевск</h2>
                             <img class="card__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
-                    <li class="card">
+                    <li class="card__conteiner">
                         <img class="card__image" src="images/Elbrus.jpg" alt="Изображение Эльбрус">
                         <div class="card__description">
                             <h2 class="card__title">Гора Эльбрус</h2>
                             <img class="card__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
-                    <li class="card">
+                    <li class="card__conteiner">
                         <img class="card__image" src="images/Dombau.jpg" alt="Изображение Домбай">
                         <div class="card__description">
                             <h2 class="card__title">Домбай</h2>
                             <img class="card__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
-                    <li class="card">
+                    <li class="card__conteiner">
                         <img class="card__image" src="images/Elbrus.jpg" alt="Изображение Эльбрус">
                         <div class="card__description">
                             <h2 class="card__title">Гора Эльбрус</h2>
                             <img class="card__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
-                    <li class="card">
+                    <li class="card__conteiner">
                         <img class="card__image" src="images/Dombau.jpg" alt="Изображение Домбай">
                         <div class="card__description">
                             <h2 class="card__title">Домбай</h2>
                             <img class="card__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
-                    <li class="card">
+                    <li class="card__conteiner">
                         <img class="card__image" src="images/karachaevsk.jpg" alt="Изображение Карачаевск">
                         <div class="card__description">
                             <h2 class="card__title">Карачаевск</h2>
