--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <img class="cards__image" src="images/Elbrus.jpg" alt="Изображение Эльбрус">
                         <div class="cards__description">
                             <h2 class="cards__title">Гора Эльбрус</h2>
-                            <img class="cards__emotion card__emotion_active" src="images/like.svg" alt="Лайк">
+                            <img class="cards__emotion cards__emotion_active" src="images/like.svg" alt="Лайк">
                         </div>
                     </li>
                     <li class="cards__conteiner">
