--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                 <button class="popup__close" type="button"></button>
                 <form class="popup__container" name="form">
                     <h2 class="popup__title">Редактировать профиль</h2>
-                    <input class="popup__text popup__text-name" type="text" placeholder="Жак-Ив-Кусто" name="name">
-                    <input class="popup__text popup__text-spec" type="text" placeholder="Исследователь океана" name="job">
+                    <input class="popup__text popup__text_type_name" type="text" placeholder="Жак-Ив-Кусто" name="name">
+                    <input class="popup__text popup__text_type_job" type="text" placeholder="Исследователь океана" name="job">
                     <button type="submit" class="popup__bsave">Сохранить</button>
                 </form>
             </div>
