--- a/index.html
+++ b/index.html
@@ -26,57 +26,22 @@
                 <button class="profile__add" type="button"></button>
             </section>
             <section class="cards">
-                <ul class="cards__list">
-                    <li class="cards__conteiner">
-                        <img class="cards__image" src="images/karachaevsk.jpg" alt="Изображение Карачаевск">
-                        <div class="cards__description">
-                            <h2 class="cards__title">Карачаевск</h2>
-                            <button class="cards__emotion cards__emotion_active" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="cards__conteiner">
-                        <img class="cards__image" src="images/Elbrus.jpg" alt="Изображение Эльбрус">
-                        <div class="cards__description">
-                            <h2 class="cards__title">Гора Эльбрус</h2>
-                            <button class="cards__emotion cards__emotion_active" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="cards__conteiner">
-                        <img class="cards__image" src="images/Dombau.jpg" alt="Изображение Домбай">
-                        <div class="cards__description">
-                            <h2 class="cards__title">Домбай</h2>
-                            <button class="cards__emotion cards__emotion_active" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="cards__conteiner">
-                        <img class="cards__image" src="images/Elbrus.jpg" alt="Изображение Эльбрус">
-                        <div class="cards__description">
-                            <h2 class="cards__title">Гора Эльбрус</h2>
-                            <button class="cards__emotion cards__emotion_active" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="cards__conteiner">
-                        <img class="cards__image" src="images/Dombau.jpg" alt="Изображение Домбай">
-                        <div class="cards__description">
-                            <h2 class="cards__title">Домбай</h2>
-                            <button class="cards__emotion cards__emotion_active" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="cards__conteiner">
-                        <img class="cards__image" src="images/karachaevsk.jpg" alt="Изображение Карачаевск">
-                        <div class="cards__description">
-                            <h2 class="cards__title">Карачаевск</h2>
-                            <button class="cards__emotion cards__emotion_active" type="button"></button>
-                        </div>
-                    </li>
-                </ul>
             </section>
         </main>
         <footer class="footer">
             <p class="footer__copyright">© 2021 Mesto Russia</p>
         </footer>
+        <template class="cards__list">
+            <div class="cards__conteiner">
+                <img class="cards__image" alt="Изображение">
+                <div class="cards__description">
+                    <h2 class="cards__title"></h2>
+                    <button class="cards__emotion cards__emotion_active" type="button"></button>
+                </div>
+            </div>
+        </template>
         <div class="popup popup_opened">
-            <div id="formElement" class="popup__content">
+            <div id="popupEdit" class="popup__content">
                 <button class="popup__close" type="button"></button>
                 <form class="popup__container" name="form">
                     <h2 class="popup__title">Редактировать профиль</h2>
@@ -85,9 +50,19 @@
                     <button type="submit" class="popup__bsave">Сохранить</button>
                 </form>
             </div>
+            <div class="popup popup_opened">
+                <div id="popupAdd" class="popup__content">
+                    <button class="popup__close" type="button"></button>
+                    <form class="popup__container" name="form">
+                        <h2 class="popup__title">Новое место</h2>
+                        <input class="popup__text popup__text_type_name" type="text" placeholder="Название" name="place">
+                        <input class="popup__text popup__text_type_job" type="text" placeholder="Ссылка" name="link">
+                        <button type="submit" class="popup__bsave">Сохранить</button>
+                    </form>
+                </div>
+            </div>
         </div>
-    </div>
-    <script src="scripts/script.js"></script>
+        <script src="scripts/script.js"></script>
 </body>
 
 </html>
