Added function of delete

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
         </footer>
         <template class="cards__list">
             <div class="cards__conteiner">
-                <img class="cards__image" src="" alt="Изображение">
+                <img class="cards__image" src="" alt="">
+                <button class="cards__trashicon" type="button"></button>
                 <div class="cards__description">
                     <h2 class="cards__title"></h2>
-                    <button class="cards__emotion cards__emotion_active" type="button"></button>
+                    <button class="cards__emotion" type="button"></button>
                 </div>
             </div>
         </template>
