--- a/index.html
+++ b/index.html
@@ -63,7 +63,16 @@
                 </form>
             </div>
         </div>
-        <script src="scripts/script.js"></script>
+        <div id='popupImage' class="popup popup_opened popup__zoom">
+            <div class="popup__content popup__content_zoom">
+                <button id="popupImageClose" class="popup__close" type="button">
+                </button>
+                <img class="popup__image">
+                <h2 class="popup__subtitle"></h2>
+            </div>
+        </div>
+    </div>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
