Fixed validation error

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </footer>
         <template class="cards__list">
             <div class="cards__conteiner">
-                <img class="cards__image" src="" alt="">
+                <img class="cards__image" src="." alt=".">
                 <button class="cards__trashicon" type="button"></button>
                 <div class="cards__description">
                     <h2 class="cards__title"></h2>
@@ -67,7 +67,7 @@
             <div class="popup__content popup__content_zoom">
                 <button id="popupImageClose" class="popup__close" type="button">
                 </button>
-                <img class="popup__image">
+                <img class="popup__image" alt="." src=".">
                 <h2 class="popup__subtitle"></h2>
             </div>
         </div>
