--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button class="cards__trashicon" type="button"></button>
                 <div class="cards__description">
                     <h2 class="cards__title"></h2>
-                    <button class="cards__emotion" type="button"></button>
+                    <button id="likeButton" class="cards__emotion" type="button"></button>
                 </div>
             </div>
         </template>
@@ -67,7 +67,7 @@
             <div class="popup__content popup__content_zoom">
                 <button id="popupImageClose" class="popup__close" type="button">
                 </button>
-                <img class="popup__image" alt="." src=".">
+                <img id="cardImage" class="popup__image" alt="." src=".">
                 <h2 class="popup__subtitle"></h2>
             </div>
         </div>
