--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <p class="footer__copyright">© 2021 Mesto Russia</p>
         </footer>
         <template class="cards__list">
-            <div class="cards__conteiner">
+            <article class="cards__conteiner">
                 <img class="cards__image" src="." alt=".">
                 <button class="cards__trashicon" type="button"></button>
                 <div class="cards__description">
                     <h2 class="cards__title"></h2>
                     <button id="likeButton" class="cards__emotion" type="button"></button>
                 </div>
-            </div>
+            </article>
         </template>
         <div id='popupEdit' class="popup popup_type_opened">
             <div class="popup__content">
