--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <p class="footer__copyright">© 2021 Mesto Russia</p>
         </footer>
         <template class="cards__list">
-            <article class="cards__conteiner">
+            <div class="cards__conteiner">
                 <img class="cards__image" src="." alt=".">
                 <button class="cards__trashicon" type="button"></button>
                 <div class="cards__description">
                     <h2 class="cards__title"></h2>
-                    <button id="likeButton" class="cards__emotion" type="button"></button>
+                    <button class="cards__emotion" type="button"></button>
                 </div>
-            </article>
+            </div>
         </template>
         <div id='popupEdit' class="popup popup_type_opened">
             <div class="popup__content">
@@ -67,7 +67,7 @@
             <div class="popup__content popup__content_zoom">
                 <button id="popupImageClose" class="popup__close" type="button">
                 </button>
-                <img id="cardImage" class="popup__image" alt="." src=".">
+                <img class="popup__image" alt="." src=".">
                 <h2 class="popup__subtitle"></h2>
             </div>
         </div>
