--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </template>
         <div id='popupEdit' class="popup popup_type_opened">
             <div class="popup__content">
-                <button class="popup__close" type="button"></button>
+                <button class="popup__close popup__close_add" type="button"></button>
                 <form class="popup__container popup__container_type_edit" name="formEdit">
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <input class="popup__text popup__text_type_name" type="text" placeholder="Жак-Ив-Кусто" name="name">
@@ -54,7 +54,7 @@
         </div>
         <div id='popupAdd' class="popup popup_type_opened">
             <div class="popup__content">
-                <button id="addClose" class="popup__close" type="button"></button>
+                <button class="popup__close popup__close_edit" type="button"></button>
                 <form class="popup__container popup__container_type_add" id="formAdd">
                     <h2 class="popup__title">Новое место</h2>
                     <input class="popup__text popup__text_type_title" type="text" placeholder="Название" name="place">
@@ -63,9 +63,9 @@
                 </form>
             </div>
         </div>
-        <div id='popupImage' class="popup popup_type_opened popup_type_zoom">
+        <div id='popupZoom' class="popup popup_type_opened popup_type_zoom">
             <div class="popup__content popup__content_zoom">
-                <button id="popupImageClose" class="popup__close" type="button">
+                <button class="popup__close popup__close_zoom" type="button">
                 </button>
                 <img class="popup__image" alt="." src=".">
                 <h2 class="popup__subtitle"></h2>
