--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <footer class="footer">
             <p class="footer__copyright">© 2022 Mesto Russia</p>
         </footer>
-        <div id='popupEdit' class="popup popup_type_opened">
+        <div id='popupEdit' class="popup">
             <div class="popup__content">
                 <button class="popup__close popup__close_add" type="button"></button>
                 <form class="popup__container popup__container_type_edit" name="formEdit">
@@ -52,7 +52,7 @@
                 </form>
             </div>
         </div>
-        <div id='popupAdd' class="popup popup_type_opened">
+        <div id='popupAdd' class="popup">
             <div class="popup__content">
                 <button class="popup__close popup__close_edit" type="button"></button>
                 <form class="popup__container popup__container_type_add" id="formAdd">
@@ -63,7 +63,7 @@
                 </form>
             </div>
         </div>
-        <div id='popupZoom' class="popup popup_type_opened popup_type_zoom">
+        <div id='popupZoom' class="popup popup_type_zoom">
             <div class="popup__content popup__content_zoom">
                 <button class="popup__close popup__close_zoom" type="button">
                 </button>
