--- a/index.html
+++ b/index.html
@@ -44,22 +44,26 @@
         <div id='popupEdit' class="popup">
             <div class="popup__content">
                 <button class="popup__close popup__close_edit" type="button"></button>
-                <form class="popup__container popup__container_type_edit" name="formEdit">
+                <form class="popup__form popup__form_type_edit" name="formEdit">
                     <h2 class="popup__title">Редактировать профиль</h2>
-                    <input class="popup__text popup__text_type_name" type="text" placeholder="Жак-Ив-Кусто" name="name">
-                    <input class="popup__text popup__text_type_job" type="text" placeholder="Исследователь океана" name="job">
-                    <button type="submit" class="popup__bsave">Сохранить</button>
+                    <input class="popup__input popup__input_visible popup__input_type_name" type="text" placeholder="Имя" value="Жак-Ив-Кусто" name="name" required minlength="2" maxlength="40">
+                    <span class="popup__input popup__input_type_error popup__input_type_naming"></span>
+                    <input class="popup__input popup__input_visible popup__input_type_job" type="text" placeholder="О себе" value="Исследователь океана" name="job" required minlength="2" maxlength="200">
+                    <span class="popup__input popup__input_type_error popup__input_type_about"></span>
+                    <button type="submit" class="popup__button">Сохранить</button>
                 </form>
             </div>
         </div>
         <div id='popupAdd' class="popup">
             <div class="popup__content">
                 <button class="popup__close popup__close_add" type="button"></button>
-                <form class="popup__container popup__container_type_add" id="formAdd">
+                <form class="popup__form popup__form_type_add" id="formAdd">
                     <h2 class="popup__title">Новое место</h2>
-                    <input class="popup__text popup__text_type_title" type="text" placeholder="Название" name="place">
-                    <input class="popup__text popup__text_type_image" type="text" placeholder="Ссылка на картинку" name="link">
-                    <button id="saveAdded" type="submit" class="popup__bsave">Сохранить</button>
+                    <input class="popup__input popup__input_visible popup__input_type_title" type="text" placeholder="Название" name="place" minlength="2" maxlength="30" required>
+                    <span class="popup__input  popup__input_type_error popup__input_type_place"></span>
+                    <input class="popup__input popup__input_visible popup__input_type_image" type="url" placeholder="Ссылка на картинку" name="link" required>
+                    <span class="popup__input popup__input_type_error popup__input_type_url"></span>
+                    <button id="saveAdded" type="submit" class="popup__button">Сохранить</button>
                 </form>
             </div>
         </div>
@@ -73,6 +77,7 @@
         </div>
     </div>
     <script src="scripts/script.js"></script>
+    <script src="scripts/validate.js"></script>
 </body>
 
 </html>
