--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <span class="popup__input_type_naming input-name-error"></span>
                     <input id="input-job" class="popup__input popup__input_type_job" type="text" placeholder="О себе" value="Исследователь океана" name="job" required minlength="2" maxlength="200">
                     <span class="popup__input_type_about input-job-error"></span>
-                    <button type="submit" class="popup__button">Сохранить</button>
+                    <button type="submit" class="popup__button popup__button_disable" disabled>Сохранить</button>
                 </form>
             </div>
         </div>
@@ -63,7 +63,7 @@
                     <span class="popup__input_type_place input-title-error"></span>
                     <input id="input-url" class="popup__input popup__input_type_image" type="url" placeholder="Ссылка на картинку" name="link" required>
                     <span class="popup__input_type_url input-url-error"></span>
-                    <button id="saveAdded" type="submit" class="popup__button">Создать</button>
+                    <button type="submit" class="popup__button popup__button_disable" disabled>Создать</button>
                 </form>
             </div>
         </div>
