--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 <form class="popup__form popup__form_type_edit" name="formEdit" novalidate>
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <input id="input-name" class="popup__input popup__input_name" type="text" placeholder="Имя" value="Жак-Ив-Кусто" name="name" required minlength="2" maxlength="40">
-                    <span class="popup__input_type_naming input-name-error"></span>
+                    <span class="input-name-error"></span>
                     <input id="input-job" class="popup__input popup__input_job" type="text" placeholder="О себе" value="Исследователь океана" name="job" required minlength="2" maxlength="200">
-                    <span class="popup__input_type_about input-job-error"></span>
+                    <span class="input-job-error"></span>
                     <button type="submit" class="popup__button popup__button_disable" disabled>Сохранить</button>
                 </form>
             </div>
@@ -60,9 +60,9 @@
                 <form class="popup__form popup__form_type_add" id="formAdd" novalidate>
                     <h2 class="popup__title">Новое место</h2>
                     <input id="input-title" class="popup__input popup__input_title" type="text" placeholder="Название" name="place" minlength="2" maxlength="30" required>
-                    <span class="popup__input_type_place input-title-error"></span>
+                    <span class="input-title-error"></span>
                     <input id="input-url" class="popup__input popup__input_image" type="url" placeholder="Ссылка на картинку" name="link" required>
-                    <span class="popup__input_type_url input-url-error"></span>
+                    <span class="input-url-error"></span>
                     <button type="submit" class="popup__button popup__button_disable" disabled>Создать</button>
                 </form>
             </div>
