--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <button class="popup__close popup__close_edit" type="button"></button>
                 <form class="popup__form popup__form_type_edit" name="formEdit" novalidate>
                     <h2 class="popup__title">Редактировать профиль</h2>
-                    <input id="input-name" class="popup__input popup__input_name" type="text" placeholder="Имя" value="Жак-Ив-Кусто" name="name" required minlength="2" maxlength="40">
+                    <input id="input-name" class="popup__input popup__input_name" type="text" placeholder="Имя" value="" name="name" required minlength="2" maxlength="40">
                     <span class="input-name-error"></span>
-                    <input id="input-job" class="popup__input popup__input_job" type="text" placeholder="О себе" value="Исследователь океана" name="job" required minlength="2" maxlength="200">
+                    <input id="input-job" class="popup__input popup__input_job" type="text" placeholder="О себе" value="" name="job" required minlength="2" maxlength="200">
                     <span class="input-job-error"></span>
                     <button type="submit" class="popup__button popup__button_disable" disabled>Сохранить</button>
                 </form>
