--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <span class="popup__input_span input-name-error"></span>
                     <input id="input-job" class="popup__input popup__input_job" type="text" placeholder="О себе" value="" name="job" required minlength="2" maxlength="200">
                     <span class="popup__input_span input-job-error"></span>
-                    <button type="submit" class="popup__button popup__button_disable" disabled>Сохранить</button>
+                    <button type="submit" class="popup__button popup__button_disabled" disabled>Сохранить</button>
                 </form>
             </div>
         </div>
@@ -63,7 +63,7 @@
                     <span class="popup__input_span input-title-error"> </span>
                     <input id="input-url" class="popup__input popup__input_image" type="url" placeholder="Ссылка на картинку" name="link" required>
                     <span class="popup__input_span input-url-error"> </span>
-                    <button type="submit" class="popup__button popup__button_disable" disabled>Создать</button>
+                    <button type="submit" class="popup__button popup__button_disabled" disabled>Создать</button>
                 </form>
             </div>
         </div>
