Added class Card for insert initial cards

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <span class="popup__span input-name-error"></span>
                     <input id="input-job" class="popup__input popup__input_job" type="text" placeholder="О себе" value="" name="job" required minlength="2" maxlength="200">
                     <span class="popup__span input-job-error"></span>
-                    <button type="submit" class="popup__button popup__button_disabled">Сохранить</button>
+                    <button type="submit" class="popup__button popup__button_disabled" disabled>Сохранить</button>
                 </form>
             </div>
         </div>
