All problems fixed

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <main class="content">
             <section class="profile">
                 <div class="profile__card">
-                    <img class="profile__avatar" src="<%=require('../src/images/image.jpg'%>)" alt="Аватар">
+                    <img class="profile__avatar" src="<%=require('../src/images/image.jpg')%>" alt="Аватар">
                     <div class="profile__info">
                         <h1 class="profile__name">Жак-Ив-Кусто</h1>
                         <button class="profile__button" type="button"></button>
