BEM problem fixed

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                 <div class="profile__card">
                     <div class="profile__avatar">
                         <img class="profile__image" src="<%=require('../src/images/image.jpg')%>" alt="Аватар">
-                        <button class="profile__avatar_button"></button>
+                        <button class="profile__edit"></button>
                     </div>
                     <div class="profile__info">
                         <h1 class="profile__name">Жак-Ив-Кусто</h1>
